creacion-del-website

--- a/assets/scss/04-modules/_02-product.scss
+++ b/assets/scss/04-modules/_02-product.scss
@@ -250,10 +250,10 @@
 }
 
 .product-st2-item {
-  background-color: #FAFAFA;
+  background-color: #B2B2B2;
   border-radius: 10px;
   .product-info {
-    background-color: #FAFAFA;
+    background-color: #B2B2B2;
     border-radius: 10px;
     overflow: hidden;
     padding: 25px 30px 36px;
