--- a/assets/scss/03-layout/_03-wrapper.scss
+++ b/assets/scss/03-layout/_03-wrapper.scss
@@ -1,3 +1,5 @@
+$theme-color: #B2B2B2 !default;
+
 /*----------------------------------------*/
 /*  Wrapper CSS
 /*----------------------------------------*/
@@ -343,7 +345,6 @@
       border-bottom: none;
       border-radius: 0;
       color: $black;
-      font-family: $font-current-theme1;
       font-size: 15px;
       font-weight: 500;
       display: block;
