--- a/assets/scss/04-modules/_01-main-banner.scss
+++ b/assets/scss/04-modules/_01-main-banner.scss
@@ -9,7 +9,7 @@
 }
 
 .hero-slide-item {
-  background-color: #FAFAFA;
+  background-color: #B2B2B2;
   height: 1000px !important;
   z-index: 1;
   display: flex;
@@ -25,7 +25,6 @@
     height: auto !important;
   }
   &:before {
-    background-color: #D9F1E1;
     position: absolute;
     width: 50%;
     content: "";
