--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,5 +1,5 @@
 .footer-main-area {
-    background-color: #B2B2B2;
+    background-color: #27222C;
 }
 
 .footer-widget {
@@ -32,13 +32,13 @@
 
         &:hover {
             background-color: white;
-            color: #B2B2B2 !important;
+            color: #27222C !important;
         }
     }
 }
 
 .footer-bottom {
-    background-color: #B2B2B2 !important;
+    background-color: #27222C !important;
     
     .footer-bottom-content {
         .copyright {
