--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,11 +1,11 @@
 // Variables del tema
-$theme-color: #B2B2B2;
-$theme-hover: #B2B2B2;
+$theme-color: #27222C;
+$theme-hover: #27222C;
 $font-current-theme1: sans-serif;  // Reemplaza con tu fuente
 
 // Colors
-$primary-color: #B2B2B2;
-$footer-bg: #B2B2B2;
+$primary-color: #27222C;
+$footer-bg: #27222C;
 $footer-bottom-bg: #8032FF;
 $footer-text: white;
 $footer-text-light: rgba(255, 255, 255, 0.8);
