--- a/assets/scss/01-helpers/_variabls.scss
+++ b/assets/scss/01-helpers/_variabls.scss
@@ -15,7 +15,7 @@ $extra-small-mobile: "only screen and (max-width: 479px)";
 //===============================
 
 // Color
-$primary: #B2B2B2;
+$primary: #27222C;
 $secondary: #6C757D;
 $success: #4CAF50;
 $danger: #F44336;
