--- a/assets/scss/04-modules/_01-main-banner.scss
+++ b/assets/scss/04-modules/_01-main-banner.scss
@@ -9,7 +9,7 @@
 }
 
 .hero-slide-item {
-  background-color: #B2B2B2;
+  background-color: #27222C;
   height: 1000px !important;
   z-index: 1;
   display: flex;
@@ -247,7 +247,7 @@
 .hero-slide-thumb {
   position: absolute;
   right: 0;
-  top: -162px;
+  top: 0px;
   @media #{$desktop-device, $tablet-device} {
     position: relative;
     top: 20px;
