--- a/assets/scss/04-modules/_10-offcanvas-menu.scss
+++ b/assets/scss/04-modules/_10-offcanvas-menu.scss
@@ -18,7 +18,7 @@
   .offcanvas-body {
     padding: 12px 20px 20px;
     scrollbar-width: auto;
-    scrollbar-color: #B2B2B2;
+    scrollbar-color: #27222C;
     /* Chrome, Edge, and Safari */
     &::-webkit-scrollbar {
       width: 2px;
