--- a/assets/scss/04-modules/_01-main-banner.scss
+++ b/assets/scss/04-modules/_01-main-banner.scss
@@ -69,7 +69,6 @@
   }
   @media #{$large-mobile} {
     padding-top: 60px;
-    margin-top: 134px;
     margin-bottom: 40px;
   }
   @media #{$extra-small-mobile} {
@@ -122,7 +121,7 @@
   }
 
   .hero-slide-desc {
-    font-size: 21px;
+    font-size: 32px;
     line-height: 1.34;
     max-width: 410px;
     margin-bottom: 30px;
@@ -326,7 +325,7 @@
   z-index: 1;
   @media #{$laptop-device, $desktop-device, $tablet-device} {
     display: flex;
-    bottom: 24px;
+    bottom: 0;
   }
   @media #{$desktop-device, $tablet-device} {
     right: -5px;
@@ -489,8 +488,8 @@
         animation-name: zoomIn;
         -webkit-animation-delay: .5s;
         animation-delay: .5s;
-        -webkit-animation-duration: 2s;
-        animation-duration: 2s;
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
@@ -501,38 +500,38 @@
         animation-name: fadeInLeft;
         -webkit-animation-delay: 1.3s;
         animation-delay: 1.3s;
-        -webkit-animation-duration: 1.5s;
-        animation-duration: 1.5s;
+        -webkit-animation-duration: 0.30s;
+        animation-duration: 0.30s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
       .hero-slide-title {
         -webkit-animation-name: fadeInUp;
         animation-name: fadeInUp;
-        -webkit-animation-delay: 2.2s;
-        animation-delay: 2.2s;
-        -webkit-animation-duration: 1.5s;
-        animation-duration: 1.5s;
+        -webkit-animation-delay: 1.1s;
+        animation-delay: 1.1s;
+        -webkit-animation-duration: 0.30s;
+        animation-duration: 0.30s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
       .hero-slide-desc {
         -webkit-animation-name: fadeInUp;
         animation-name: fadeInUp;
-        -webkit-animation-delay: 2.8s;
-        animation-delay: 2.8s;
-        -webkit-animation-duration: 1.5s;
-        animation-duration: 1.5s;
+        -webkit-animation-delay: 1.4s;
+        animation-delay: 1.4s;
+        -webkit-animation-duration: 0.30s;
+        animation-duration: 0.30s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
       .btn  {
         -webkit-animation-name: fadeInUp;
         animation-name: fadeInUp;
-        -webkit-animation-delay: 3.2s;
-        animation-delay: 3.2s;
-        -webkit-animation-duration: 1.5s;
-        animation-duration: 1.5s;
+        -webkit-animation-delay: 1.6s;
+        animation-delay: 1.6s;
+        -webkit-animation-duration: 0.30s;
+        animation-duration: 0.30s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
@@ -546,8 +545,8 @@
       animation-name: heightIn;
       -webkit-animation-delay: 1s;
       animation-delay: 1s;
-      -webkit-animation-duration: 3s;
-      animation-duration: 3s;
+      -webkit-animation-duration: 1.5s;
+      animation-duration: 1.5s;
       -webkit-animation-fill-mode: both;
       animation-fill-mode: both;
     }
@@ -562,8 +561,8 @@
         animation-name: zoomIn;
         -webkit-animation-delay: .5s;
         animation-delay: .5s;
-        -webkit-animation-duration: 2s;
-        animation-duration: 2s;
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
@@ -574,18 +573,18 @@
         animation-name: fadeInLeft;
         -webkit-animation-delay: 1.3s;
         animation-delay: 1.3s;
-        -webkit-animation-duration: 1.5s;
-        animation-duration: 1.5s;
+        -webkit-animation-duration: 0.75s;
+        animation-duration: 0.75s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
       .hero-two-slide-title {
         -webkit-animation-name: fadeInUp;
         animation-name: fadeInUp;
-        -webkit-animation-delay: 2.2s;
-        animation-delay: 2.2s;
-        -webkit-animation-duration: 1.5s;
-        animation-duration: 1.5s;
+        -webkit-animation-delay: 1.1s;
+        animation-delay: 1.1s;
+        -webkit-animation-duration: 0.75s;
+        animation-duration: 0.75s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
@@ -594,8 +593,8 @@
         animation-name: fadeInUp;
         -webkit-animation-delay: 2.8s;
         animation-delay: 2.8s;
-        -webkit-animation-duration: 1.5s;
-        animation-duration: 1.5s;
+        -webkit-animation-duration: 0.75s;
+        animation-duration: 0.75s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
@@ -604,8 +603,8 @@
         animation-name: fadeInUp;
         -webkit-animation-delay: 3.2s;
         animation-delay: 3.2s;
-        -webkit-animation-duration: 1.5s;
-        animation-duration: 1.5s;
+        -webkit-animation-duration: 0.75s;
+        animation-duration: 0.75s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
@@ -614,8 +613,8 @@
         animation-name: fadeInUp;
         -webkit-animation-delay: 3.3s;
         animation-delay: 3.3s;
-        -webkit-animation-duration: 1.5s;
-        animation-duration: 1.5s;
+            -webkit-animation-duration: 0.75s;
+        animation-duration: 0.75s;
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
       }
